1.basic backend setup 2.mongoDB connection added 3.signup function implemented

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 PORT = 8000
+MONGO_DB_URI=  mongodb+srv://ashukr2218:hqv1jpFzY5vN78kp@cluster0.sbrrxsl.mongodb.net/talkie-db?retryWrites=true&w=majority
