--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A  chat app that lets you have fun and engaging conversations with people from all over the world.",
   "main": "server.js",
   "scripts": {
-    "server": "nodemon backend/server.js"
+    "server": "nodemon backend/server.js",
+    "start": "node backend/server.js",
+    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
   },
   "type": "module",
   "author": "",
