--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT = 8000
 MONGO_DB_URI=  mongodb+srv://ashukr2218:hqv1jpFzY5vN78kp@cluster0.sbrrxsl.mongodb.net/talkie-db?retryWrites=true&w=majority
 JWT_SECRET_KEY= BvBev18TpUskYSor3vPOcjfPnkjMqMbfhcf9yVWTYWo=
+NODE_ENV= development
