--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A  chat app that lets you have fun and engaging conversations with people from all over the world.",
   "main": "server.js",
   "scripts": {
-    "server": "nodemon backend/server.js",
-    "start": "node backend/server.js",
+    "server": "nodemon Backend/server.js",
+    "start": "node Backend/server.js",
     "build": "npm install && npm install --prefix Frontend && npm run build --prefix Frontend"
   },
   "type": "module",
